feat: Search Profile CRUD structure refractor

--- a/ApplicantDiscoveryService/src/main/resources/application.yml
+++ b/ApplicantDiscoveryService/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: discovery-service
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/discovery_db}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5434/discovery_db}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
@@ -40,3 +40,11 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8070/eureka}
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  show-actuator: false
