--- a/ApplicantDiscoveryApi/pom.xml
+++ b/ApplicantDiscoveryApi/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>spring-boot-starter-validation-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+            <version>2.2.27</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
