--- a/ApplicantDiscoveryService/src/main/resources/application.yml
+++ b/ApplicantDiscoveryService/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8082
+  port: ${SERVER_PORT:8182}
 
 spring:
   application:
     name: discovery-service
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5534/discovery_db}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/discovery_db}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
@@ -40,6 +40,14 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8070/eureka}
+
+key:
+  public-key-b64: ${PUBLIC_KEY_B64:}
+  private-key-b64: ${PRIVATE_KEY_B64:}
+
+kafka:
+  kafka-host-url: ${KAFKA_HOST_URL:localhost:9192}
+  schema-registry-host-url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
 
 springdoc:
   api-docs:
