--- a/ApplicantDiscoveryService/src/main/resources/application.yml
+++ b/ApplicantDiscoveryService/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: discovery-service
+  config:
+    import: optional:file:../.env[.properties],optional:file:.env[.properties]
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/discovery_db}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
@@ -16,6 +18,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      password: ${REDIS_PASSWORD:}
+      port: ${REDIS_PORT:6479}
+      timeout: 2000ms
 
 management:
   endpoints:
@@ -41,18 +49,28 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8070/eureka}
 
-key:
-  public-key-b64: ${PUBLIC_KEY_B64:}
-  private-key-b64: ${PRIVATE_KEY_B64:}
-
 kafka:
   kafka-host-url: ${KAFKA_HOST_URL:localhost:9192}
   schema-registry-host-url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
 
+key:
+  public-key-b64: ${PUBLIC_KEY_B64:}
+  private-key-b64: ${PRIVATE_KEY_B64:}
+
+jwe:
+  issuer: ${JWE_ISSUER:JM_BACKEND}
+  temp-token-ttl-seconds: ${JWE_TEMP_TOKEN_TTL:300}
+  access-token-ttl-seconds: ${JWE_ACCESS_TOKEN_TTL:900}
+  refresh-token-ttl-seconds: ${JWE_REFRESH_TOKEN_TTL:604800}
+
+# OpenAPI/Swagger Configuration
 springdoc:
   api-docs:
     path: /api-docs
+    enabled: true
   swagger-ui:
     path: /swagger-ui.html
     enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
   show-actuator: false
