--- a/ApplicantDiscoveryApi/pom.xml
+++ b/ApplicantDiscoveryApi/pom.xml
@@ -57,6 +57,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
