--- a/ApplicantDiscoveryService/pom.xml
+++ b/ApplicantDiscoveryService/pom.xml
@@ -144,6 +144,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
