--- a/ApplicantDiscoveryService/src/main/resources/application.yml
+++ b/ApplicantDiscoveryService/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
       password: ${REDIS_PASSWORD:}
       port: ${REDIS_PORT:6479}
       timeout: 2000ms
+    elasticsearch:
+      uris: ${SPRING_ELASTICSEARCH_URIS:http://localhost:9200}
+      socket-timeout: 10s
 
 management:
   endpoints:
