--- a/ApplicantDiscoveryService/src/main/resources/mock/mock-applicants.json
+++ b/ApplicantDiscoveryService/src/main/resources/mock/mock-applicants.json
@@ -241,7 +241,7 @@
     "skillIds": [1, 5, 10]
   },
   {
-    "applicantId": "d0e1f2a3-4b5c-6d7e-8f9a-0b1c2d3e4f5g",
+    "applicantId": "d0e1f2a3-4b5c-6d7e-8f9a-0b1c2d3e4f5f",
     "firstName": "Maria",
     "lastName": "Garcia",
     "phone": "+1234567899",
@@ -255,7 +255,7 @@
     "educationList": [
       {
         "educationId": "8c9d0e1f-2a3b-4c5d-6e7f-8a9b0c1d2e3f",
-        "applicantId": "d0e1f2a3-4b5c-6d7e-8f9a-0b1c2d3e4f5g",
+        "applicantId": "d0e1f2a3-4b5c-6d7e-8f9a-0b1c2d3e4f5f",
         "institutionName": "University of Miami",
         "degree": "BACHELOR",
         "gpa": 3.6,
