--- a/ApplicantDiscoveryService/src/main/resources/application.yml
+++ b/ApplicantDiscoveryService/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          time_zone: GMT+7
+
   data:
     redis:
       host: ${REDIS_HOST:localhost}
